2012-12-14 - 0.2.3 - Dominic Simm <simm@sub.uni-goettingen.de>
	* Added GeocodeCommandController-action for scheduled geocode-addition for provinces

2012-12-14 - 0.2.2 - Dominic Simm <simm@sub.uni-goettingen.de>
	* Added getter-functions to province-model for local and global reachable distcentres
	* Some style changes

2012-12-14 - 0.2.1 - Dominic Simm <simm@sub.uni-goettingen.de>
	* Added fields 'lat','lng' to city-model

2012-12-13 - 0.2.0 - Dominic Simm <simm@sub.uni-goettingen.de>
	* Added GeocodeCommandController for scheduled geocode-addition
	* Added field 'geocode' to city-model
	* Changed reachable cities relation in Province-model to m:n
	* Changed GMaps-template for automated direction inclusion
	* [Feature] Added FusionTable Support for Province Borders
	* Added Google Maps support for presentation of 'Transportwege'

2012-12-04 - 0.1.9 - Dominic Simm <simm@sub.uni-goettingen.de>
	* added jQuery-TableSorter
	
2012-11-30 - 0.1.8 - Dominic Simm <simm@sub.uni-goettingen.de>
	* changed importer to import only all cities and libraries of a region added DNB-'Sigel' link
	* implemented sidebar hook; corrected importer to add also reachable cities; changed persistence model from m:n to 1:n

2012-11-28 - 0.1.7 - Dominic Simm <simm@sub.uni-goettingen.de>
	* added province dependence-files
	* added cHash to navigation links

2012-11-26 - 0.1.6 - Dominic Simm <simm@sub.uni-goettingen.de>
	* repaired navigation links [added correct pid]
	* [Bug] caching problem

2012-11-18 - 0.1.5 - Dominic Simm <simm@sub.uni-goettingen.de>
	* added Typoscript to include navigation and breadcrumb
	* modified userFunction [navigation helper class]

2012-11-14 - 0.1.4 - Dominic Simm <simm@sub.uni-goettingen.de>
	* added helper class to produce nav-menu
	* added distCentre to importer

2012-11-14 - 0.1.3 - Dominic Simm <simm@sub.uni-goettingen.de>
	* added further translations
	* changed show / list view
	* added build files
