@@ -6,3 +6,15 @@
 	<f:translate key="tx_buechertransport_domain_model_province.description" /> <span class="required">(required)</span>
 </label><br />
 	<f:form.textarea property="description" cols="40" rows="15" /><br />
+<label for="geocode">
+	<f:translate key="tx_buechertransport_domain_model_province.geocode" />
+</label><br />
+	<f:form.textfield property="geocode" /><br />
+<label for="lat">
+	<f:translate key="tx_buechertransport_domain_model_province.lat" />
+</label><br />
+	<f:form.textfield property="lat" /><br />
+<label for="lng">
+	<f:translate key="tx_buechertransport_domain_model_province.lng" />
+</label><br />
+	<f:form.textfield property="lng" /><br />
